--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1><span>良田's Blog</span><span class="icon icon-music"><video controls="" autoplay="" name="media">
-          <source src="http://translate.google.cn/translate_tts?ie=UTF-8&amp;q=%E6%AC%A1%E3%81%AE%E4%BA%AE%E5%A4%AA%E3%80%82%E5%8C%97%E3%81%8B%E3%82%89%E3%80%82&amp;tl=ja&amp;total=1&amp;idx=0&amp;textlen=9&amp;client=t" type="audio/mpeg">
+          <source src="./others/my_self.mp3" type="audio/mpeg">
           </video></span></h1>
         <h2>良田有沃土，待花盛开时~</h2>
 
