modify index exchange

--- a/index.html
+++ b/index.html
@@ -3,20 +3,15 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
-
     <title>良田有沃土，待花盛开时~</title>
   </head>
-
   <body>
-
     <header>
       <div class="container">
         <h1><span>良田's Blog</span><span class="icon icon-music"><video controls="" autoplay="" name="media">
-          <source src="./others/my_self.mp3" type="audio/mpeg">
+          <source src="./others/my_blog.mp3" type="audio/mpeg">
           </video></span></h1>
         <h2>良田有沃土，待花盛开时~</h2>
 
