modify the sounds

--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
   <body>
     <header>
       <div class="container">
-        <h1><span>良田's Blog</span><span class="icon icon-music"><video controls="" autoplay="" name="media">
-          <source src="./others/my_blog.mp3" type="audio/mpeg">
-          </video></span></h1>
+        <h1><span>良田's Blog</span><span class="icon icon-music"><audio autoplay preload src="./others/my_blog.mp3" /></span></h1>
         <h2>良田有沃土，待花盛开时~</h2>
 
         <section id="downloads">
