--- a/about/index.html
+++ b/about/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="/stylesheets/pygment_trac.css" media="screen" />
     <title>良田有沃土，待花盛开时~</title>
   </head>
   <body>
     <header>
       <div class="container">
-        <h1><span>良田's Blog</span><span class="icon icon-music"><audio autoplay preload src="./others/my_self.mp3" /></span></h1>
+        <h1><span>良田's Blog</span><span class="icon icon-music"><audio autoplay preload src="/others/my_self.mp3" /></span></h1>
         <h2>良田有沃土，待花盛开时~</h2>
 
         <section id="downloads">
