--- a/others/index.html
+++ b/others/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="container">
-        <h1><span>良田's Blog</span><span class="icon icon-music"><audio autoplay preload src="./others/my_blog.mp3" /></span></h1>
+        <h1><span>良田's Blog</span><span class="icon icon-music"></span></h1>
         <h2>良田有沃土，待花盛开时~</h2>
 
         <section id="downloads">
@@ -21,18 +21,7 @@
 
     <div class="container">
       <section id="main_content">
-        <h3>我是一个快乐的小前端</h3>
-        <p>写写代码，画画漫画。</p>
+        <h4>没有任何其他了。</h4>
       </section>
-      <section class="galaxy galaxy-sun" id="galaxy" data-celestial="earth=1;moon=4;sun=5"></section>
   </body>
 </html>
-<script>
-  ~function () {
-    'use strict';
-    var cvs = document.createElement('canvas')
-    , ctx = cvs.getContext('2d');
-    console.log(ctx);
-
-  }()
-</script>
