remove mp3 auto play

--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <div class="container">
-        <h1><span>良田's Blog</span><span class="icon icon-music"><audio autoplay preload src="/others/my_self.mp3" /></span></h1>
+        <h1><span>良田's Blog</span><span class="icon icon-music"></span></h1>
         <h2>良田有沃土，待花盛开时~</h2>
 
         <section id="downloads">
