--- a/index.html
+++ b/index.html
@@ -1,42 +1,11 @@
-<!DOCTYPE html>
-<html>
-
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Lichenhao.github.io : A blog " />
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>良田有沃土，待花盛开时~</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/lichenhao">View on GitHub</a>
-
-          <h1 id="project_title">良田's Blog</h1>
-          <h2 id="project_tagline">良田有沃土，待花盛开时~</h2>
-
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <h3><a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>我是一个快乐的小前端</h3><p>写写代码，画画漫画。</p>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
+---
+layout: base
+title: 良田有沃土，待花盛开时~
+---
+<div id="header_wrap" class="outer">{% include common/header/header.html %}</div>
+<div id="main_content_wrap" class="outer">
+  <ul>{% for post in site.posts %}
+      <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+  {% endfor %}</ul>
+</div>
+<div id="footer_wrap" class="outer">{% include common/footer/footer.html %}</div>
