--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: 良田有沃土，待花盛开时~
 <div id="header_wrap" class="outer">{% include common/header/header.html %}</div>
 <div id="main_content_wrap" class="outer">
   <ul>{% for post in site.posts %}
-      <li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+      <li>{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></li>
   {% endfor %}</ul>
 </div>
 <div id="footer_wrap" class="outer">{% include common/footer/footer.html %}</div>
