--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: base
 title: 良田有沃土，待花盛开时~
+theme: default
 ---
 <ul>{% for post in site.posts %}
     <li>{{ post.date | date_to_string }} <a href="{{ post.url }}">{{ post.title }}</a></li>
