remove no used title

--- a/_posts/2014-04-03-angularjs-demo.html
+++ b/_posts/2014-04-03-angularjs-demo.html
@@ -1,8 +1,8 @@
 ---
 layout: base
-title: 再见了百度
+title: AngularJs demo
 ---
-# {{page.title}}
+
 <script src="http://lichenhao.github.io/javascripts/angular.min.js"></script>
 <div ng-app="user">
   <div>
